--- a/style.css
+++ b/style.css
@@ -1,39 +1,97 @@
-html {
-    height: 100%;
-}
-
+html,
 body {
-    margin: 0px;
-    height: 100%;
     display: flex;
+    font-family: 'Comfortaa', cursive;
+    height: 100%;
+    margin: 0px;
 }
 
-div {
-    display: inline-block;
-    margin: 10px;
+h1 {
+    color: #e8ded2;
+}
+
+h2 {
+    /* font-family: 'Raleway', sans-serif; */
+    /* font-family: 'Baloo Tammudu 2', cursive; */
 }
 
 p {
     display: inline-block;
 }
 
-.left_nav {
-    background-color: #ffc93c;
-    height: 100%;
-    min-height: 100%;
-    width: 20%;
-    margin: 0px 20px 0px 0px;
+.main_div {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 }
 
-.conf_div {
-    height: 300px;
-    width: 100%
+.left_nav {
+    background-color: #056676;
+    display: flex;
+    flex-flow: column;
+    height: 80%;
+    margin: 0px;
+    min-height: 0%;
+    padding-top: 10%;
+    position: fixed;
+    text-align: center;
+    width: 20%;
 }
+
+.git_img {
+    width: 15%;
+}
+
+.right_div {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    left: 20%;
+    margin: 0px;
+    padding: 50px 3% 10px 3%;
+    position: absolute;
+    width: 74%;
+}
+
+.input_div {
+    width: 100%;
+    position: relative;
+    height: 50px;
+}
+
+.input_div input {
+    width: 100%;
+    height: 100%;
+    border: none;
+    color: #056676;
+    padding-top: 20px;
+}
+
+.input_div label {
+    bottom: 0px;
+    left: 0px;
+    padding-top: 20px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    border-bottom: 1px black;
+}
+
+.conf_div {}
 
 .pub_sub_div {
-    display: block;
+    display: flex;
+    flex-direction: row;
 }
 
-.pub_div {}
+.pub_div {
+    padding: 10px;
+    width: 30%;
+}
 
-.sub_div {}
+.sub_div {
+    padding: 10px;
+    width: 50%;
+}
