--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ html,
 body {
     display: flex;
     font-family: 'Comfortaa', cursive;
+    /* font-family: 'Raleway', sans-serif; */
+    /* font-family: 'Baloo Tammudu 2', cursive; */
     height: 100%;
     margin: 0px;
 }
@@ -11,8 +13,7 @@ h1 {
 }
 
 h2 {
-    /* font-family: 'Raleway', sans-serif; */
-    /* font-family: 'Baloo Tammudu 2', cursive; */
+    color: #056676;
 }
 
 p {
@@ -26,13 +27,13 @@ p {
 }
 
 .left_nav {
-    background-color: #056676;
-    display: flex;
+    background-color: #5eaaa8;
+    display: grid;
     flex-flow: column;
-    height: 80%;
-    margin: 0px;
+    height: 100%;
+    margin: auto 0px auto 0px;
     min-height: 0%;
-    padding-top: 10%;
+    padding-top: 7%;
     position: fixed;
     text-align: center;
     width: 20%;
@@ -40,10 +41,27 @@ p {
 
 .git_img {
     width: 15%;
+    padding: 10px;
+}
+
+.debug_window {
+    background-color: #a3d2ca;
+    border-radius: 3%;
+    border-width: 10px;
+    border-color: #056676;
+    height: 70%;
+    margin: 10px;
+    overflow: hidden;
+}
+
+.debug_title {
+    background-color: #056676;
+    color: white;
+    font-size: 14px;
 }
 
 .right_div {
-    background-color: white;
+    background-color: #e8ded2;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -54,8 +72,9 @@ p {
     width: 74%;
 }
 
-.input_div {
-    width: 100%;
+
+/* .input_div {
+    width: 50%;
     position: relative;
     height: 50px;
 }
@@ -77,7 +96,7 @@ p {
     height: 100%;
     pointer-events: none;
     border-bottom: 1px black;
-}
+} */
 
 .conf_div {}
 
