--- a/style.css
+++ b/style.css
@@ -20,23 +20,23 @@ p {
     display: inline-block;
 }
 
-.main_div {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
+main {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 2fr 3fr 5fr;
+    grid-template-rows: 2fr 3fr;
 }
 
 .left_nav {
     background-color: #5eaaa8;
+    grid-row: 1/3;
+    grid-column: 1/2;
     display: grid;
-    flex-flow: column;
     height: 100%;
     margin: auto 0px auto 0px;
     min-height: 0%;
     padding-top: 7%;
-    position: fixed;
     text-align: center;
-    width: 20%;
 }
 
 .git_img {
@@ -60,16 +60,26 @@ p {
     font-size: 14px;
 }
 
-.right_div {
-    background-color: #e8ded2;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    left: 20%;
-    margin: 0px;
-    padding: 50px 3% 10px 3%;
-    position: absolute;
-    width: 74%;
+.conf_div {
+    padding: 10px;
+    background-color: rgb(153, 153, 202);
+    text-align: center;
+    grid-row: 1/2;
+    grid-column: 2/4;
+}
+
+.pub_div {
+    background-color: khaki;
+    padding: 10px;
+    grid-row: 2/3;
+    grid-column: 2/3;
+}
+
+.sub_div {
+    background-color: lawngreen;
+    padding: 10px;
+    grid-row: 2/3;
+    grid-column: 3/4;
 }
 
 
@@ -97,20 +107,3 @@ p {
     pointer-events: none;
     border-bottom: 1px black;
 } */
-
-.conf_div {}
-
-.pub_sub_div {
-    display: flex;
-    flex-direction: row;
-}
-
-.pub_div {
-    padding: 10px;
-    width: 30%;
-}
-
-.sub_div {
-    padding: 10px;
-    width: 50%;
-}
