--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 html,
 body {
-    display: flex;
     font-family: 'Comfortaa', cursive;
     /* font-family: 'Raleway', sans-serif; */
     /* font-family: 'Baloo Tammudu 2', cursive; */
-    height: 100%;
     margin: 0px;
 }
 
@@ -24,18 +22,15 @@ main {
     height: 100vh;
     display: grid;
     grid-template-columns: 2fr 3fr 5fr;
-    grid-template-rows: 2fr 3fr;
+    grid-template-rows: 5% 30% 65%;
 }
 
 .left_nav {
     background-color: #5eaaa8;
-    grid-row: 1/3;
-    grid-column: 1/2;
     display: grid;
-    height: 100%;
-    margin: auto 0px auto 0px;
-    min-height: 0%;
-    padding-top: 7%;
+    grid-row: 1/4;
+    grid-column: 1/2;
+    padding-top: 20%;
     text-align: center;
 }
 
@@ -48,7 +43,7 @@ main {
     background-color: #a3d2ca;
     border-radius: 3%;
     border-width: 10px;
-    border-color: #056676;
+    border: 5px #056676;
     height: 70%;
     margin: 10px;
     overflow: hidden;
@@ -60,26 +55,54 @@ main {
     font-size: 14px;
 }
 
+.status_bar {
+    background-color: lightcoral;
+    grid-column: 2/4;
+    grid-row: 1/2;
+    display: grid;
+    grid-template-columns: 5fr 2fr 5fr 1fr;
+}
+
+.con_status {
+    border-radius: 10px;
+    text-align: center;
+    background-color: lawngreen;
+    grid-column: 2/3;
+    height: 100%;
+}
+
+.conf_exp {
+    height: 100%;
+    grid-column: 4/5;
+}
+
+.exp_btn {
+    height: 100%;
+    width: 100%;
+}
+
 .conf_div {
     padding: 10px;
     background-color: rgb(153, 153, 202);
     text-align: center;
-    grid-row: 1/2;
+    grid-row: 2/3;
     grid-column: 2/4;
 }
 
 .pub_div {
     background-color: khaki;
     padding: 10px;
-    grid-row: 2/3;
+    grid-row: 3/4;
     grid-column: 2/3;
+    text-align: center;
 }
 
 .sub_div {
     background-color: lawngreen;
     padding: 10px;
-    grid-row: 2/3;
+    grid-row: 3/4;
     grid-column: 3/4;
+    text-align: center;
 }
 
 
